--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,8 @@
 {
-  "type": "module",
-  "scripts": {
-    "build": "vite build",
-    "dev": "vite"
-  }
-}
-
-{
   "name": "nsfleet-client",
   "version": "1.0.0",
+  "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
