--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "tailwindcss": "^3.3.0",
     "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "vite": "^4.5.0",
