--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "autoprefixer": "^10.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
