--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "tailwindcss": "^3.3.0",
     "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@tailwindcss/typography": "^0.5.10"
   },
   "devDependencies": {
     "vite": "^4.5.0",
