--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
+    "wouter": "^2.11.0"
   },
   "devDependencies": {
     "vite": "^4.5.0",
