--- a/client/package.json
+++ b/client/package.json
@@ -66,7 +66,10 @@
     "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
+
+    "drizzle-orm": "^0.30.0",
+    "better-sqlite3": "^9.0.0"
   },
   "devDependencies": {
     "vite": "^4.5.0",
