--- a/client/package.json
+++ b/client/package.json
@@ -69,7 +69,8 @@
     "@tailwindcss/typography": "^0.5.10",
 
     "drizzle-orm": "^0.30.0",
-    "better-sqlite3": "^9.0.0"
+    "pg": "^8.11.5",
+    "drizzle-zod": "^0.5.0"
   },
   "devDependencies": {
     "vite": "^4.5.0",
